--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            background: url('https://i.imgur.com/3M34hi2.png') no-repeat center center; 
+            background: url('https://imgur.com/E3F8zlQ.png') no-repeat center center; 
             background-size: cover;
         }
 
