--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>SexyNight</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header class="topbar">
     <div class="brand">
@@ -13,11 +14,11 @@
       <div class="name">Sexy<span>Night</span></div>
     </div>
 
-    <nav class="tabs">
-      <button class="tab active" data-tab="photos">Fotos</button>
-      <button class="tab" data-tab="shorts">Shorts</button>
-      <button class="tab" data-tab="free">Freezão</button>
-      <button class="tab premium" data-tab="premium">Night Premium</button>
+    <nav class="tabs" aria-label="Navegação">
+      <button class="tab active" data-tab="photos" type="button">Fotos</button>
+      <button class="tab" data-tab="shorts" type="button">Shorts</button>
+      <button class="tab" data-tab="free" type="button">Freezão</button>
+      <button class="tab premium" data-tab="premium" type="button">Night Premium</button>
     </nav>
   </header>
 
@@ -25,8 +26,9 @@
     <section class="hero">
       <div class="hero-left">
         <h1>Galeria por pastas</h1>
-        <p>Arquivos em <code>media/</code> + catálogo em <code>media.json</code>. Clique pra abrir em tela cheia.</p>
+        <p>Conteúdo em <code>media/</code> e catálogo em <code>media.json</code>. Clique na miniatura para abrir.</p>
       </div>
+
       <div class="hero-right">
         <div class="stat">
           <div class="stat-label">Aba</div>
@@ -39,7 +41,7 @@
       </div>
     </section>
 
-    <section class="toolbar">
+    <section class="toolbar" aria-label="Ferramentas">
       <div class="search">
         <input id="search" type="text" placeholder="Buscar por nome do arquivo…" autocomplete="off" />
         <button id="clear" class="btn ghost" type="button">Limpar</button>
@@ -55,21 +57,47 @@
         <span id="status" class="muted">Carregando…</span>
       </div>
 
-      <div id="grid" class="grid"></div>
+      <div id="grid" class="grid" aria-live="polite"></div>
       <div id="empty" class="empty hidden">Nada encontrado.</div>
       <div id="errorBox" class="error hidden"></div>
     </section>
   </main>
 
-  <div id="lightbox" class="lightbox hidden" role="dialog" aria-modal="true">
+  <!-- Lightbox -->
+  <div id="lightbox" class="lightbox hidden" role="dialog" aria-modal="true" aria-label="Visualização">
     <div class="lightbox-card">
       <button id="fullscreenBtn" class="fs-btn" type="button" title="Tela cheia">⛶</button>
       <button id="closeLightbox" class="x" type="button" title="Fechar">✕</button>
 
       <div id="lightboxBody" class="lightbox-body"></div>
+
       <div class="lightbox-footer">
         <div id="lightboxName" class="lightbox-name"></div>
-        <a id="openSource" class="open-src" href="#" target="_blank" rel="noreferrer">Abrir arquivo</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Gate Premium (placeholder) -->
+  <div id="gate" class="gate hidden" role="dialog" aria-modal="true" aria-label="Área restrita">
+    <div class="gate-card">
+      <div class="gate-head">
+        <div class="gate-title">Night Premium</div>
+        <button id="gateClose" class="gate-x" type="button" title="Fechar">✕</button>
+      </div>
+
+      <p class="gate-text">
+        Área restrita. Insira seu <b>código de acesso</b> para liberar.
+      </p>
+
+      <div class="gate-row">
+        <input id="gateCode" class="gate-input" type="password" placeholder="Código de acesso" />
+        <button id="gateBtn" class="gate-btn" type="button">Liberar</button>
+      </div>
+
+      <div id="gateMsg" class="gate-msg"></div>
+
+      <div class="gate-note">
+        Observação: em site estático isso é apenas um bloqueio visual. Controle real exige backend e arquivos privados.
       </div>
     </div>
   </div>
@@ -82,6 +110,10 @@
     </div>
   </footer>
 
+  <script>
+    // Dificulta clique direito (não impede acesso via URL pública)
+    document.addEventListener("contextmenu", (e) => e.preventDefault());
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
